python/parsing/AsaliLangGrammarParser.py
# Generated from AsaliLangGrammar.g4 by ANTLR 4.13.0
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys


class AsaliLangGrammarParser ( Parser ):

    grammarFileName = "AsaliLangGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"','", u"'||'", u"'&&'", u"'=='", u"'!='", 
                     u"'>'", u"'<'", u"'>='", u"'<='", u"'+'", u"'-'", u"'*'", 
                     u"'/'", u"'%'", u"'^'", u"'!'", u"';'", u"':'", u"'='", 
                     u"'('", u"')'", u"'{'", u"'}'", u"'begin'", u"'end'", 
                     u"'do'", u"'then'", u"'true'", u"'false'", u"'nil'", 
                     u"'if'", u"'else'", u"'while'", u"'for'", u"'loop'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"OR", u"AND", u"EQ", 
                      u"NEQ", u"GT", u"LT", u"GTEQ", u"LTEQ", u"PLUS", u"MINUS", 
                      u"MULT", u"DIV", u"MOD", u"POW", u"NOT", u"SCOL", 
                      u"COL", u"ASSIGN", u"OPAR", u"CPAR", u"OBRACE", u"CBRACE", 
                      u"BEGIN", u"END", u"DO", u"THEN", u"TRUE", u"FALSE", 
                      u"NIL", u"IF", u"ELSE", u"WHILE", u"FOR", u"LOOP", 
                      u"ID", u"INT", u"FLOAT", u"STRING", u"COMMENT", u"SPACE", 
                      u"OTHER" ]

    RULE_parse = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_assignment = 3
    RULE_ifStat = 4
    RULE_condition_block = 5
    RULE_stat_block = 6
    RULE_whileStat = 7
    RULE_forStat = 8
    RULE_loopStat = 9
    RULE_methodCallStat = 10
    RULE_methodCall = 11
    RULE_methodCallArguments = 12
    RULE_expr = 13
    RULE_atom = 14

    ruleNames =  [ u"parse", u"block", u"stat", u"assignment", u"ifStat", 
                   u"condition_block", u"stat_block", u"whileStat", u"forStat", 
                   u"loopStat", u"methodCallStat", u"methodCall", u"methodCallArguments", 
                   u"expr", u"atom" ]

    EOF = Token.EOF
    T__0=1
    OR=2
    AND=3
    EQ=4
    NEQ=5
    GT=6
    LT=7
    GTEQ=8
    LTEQ=9
    PLUS=10
    MINUS=11
    MULT=12
    DIV=13
    MOD=14
    POW=15
    NOT=16
    SCOL=17
    COL=18
    ASSIGN=19
    OPAR=20
    CPAR=21
    OBRACE=22
    CBRACE=23
    BEGIN=24
    END=25
    DO=26
    THEN=27
    TRUE=28
    FALSE=29
    NIL=30
    IF=31
    ELSE=32
    WHILE=33
    FOR=34
    LOOP=35
    ID=36
    INT=37
    FLOAT=38
    STRING=39
    COMMENT=40
    SPACE=41
    OTHER=42

    def __init__(self, input, output=sys.stdout):
        super(AsaliLangGrammarParser, self).__init__(input, output=output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.ParseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.BlockContext,0)


        def EOF(self):
            return self.getToken(AsaliLangGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_parse

        def enterRule(self, listener):
            if hasattr(listener, "enterParse"):
                listener.enterParse(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParse"):
                listener.exitParse(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitParse"):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = AsaliLangGrammarParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.block()
            self.state = 31
            self.match(AsaliLangGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.BlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AsaliLangGrammarParser.StatContext)
            else:
                return self.getTypedRuleContext(AsaliLangGrammarParser.StatContext,i)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_block

        def enterRule(self, listener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBlock"):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = AsaliLangGrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 33
                    self.stat() 
                self.state = 38
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.StatContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._OTHER = None # Token

        def assignment(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.AssignmentContext,0)


        def ifStat(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.IfStatContext,0)


        def whileStat(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.WhileStatContext,0)


        def methodCallStat(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.MethodCallStatContext,0)


        def forStat(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.ForStatContext,0)


        def loopStat(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.LoopStatContext,0)


        def OTHER(self):
            return self.getToken(AsaliLangGrammarParser.OTHER, 0)

        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_stat

        def enterRule(self, listener):
            if hasattr(listener, "enterStat"):
                listener.enterStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStat"):
                listener.exitStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStat"):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = AsaliLangGrammarParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.ifStat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.whileStat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.methodCallStat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 43
                self.forStat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 44
                self.loopStat()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 45
                localctx._OTHER = self.match(AsaliLangGrammarParser.OTHER)
                fmt.Println("unknown char: " + (None if localctx._OTHER is None else localctx._OTHER.text));
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.AssignmentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AsaliLangGrammarParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(AsaliLangGrammarParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.ExprContext,0)


        def SCOL(self):
            return self.getToken(AsaliLangGrammarParser.SCOL, 0)

        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_assignment

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = AsaliLangGrammarParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(AsaliLangGrammarParser.ID)
            self.state = 50
            self.match(AsaliLangGrammarParser.ASSIGN)
            self.state = 51
            self.expr(0)
            self.state = 52
            self.match(AsaliLangGrammarParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.IfStatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i=None):
            if i is None:
                return self.getTokens(AsaliLangGrammarParser.IF)
            else:
                return self.getToken(AsaliLangGrammarParser.IF, i)

        def condition_block(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AsaliLangGrammarParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(AsaliLangGrammarParser.Condition_blockContext,i)


        def ELSE(self, i=None):
            if i is None:
                return self.getTokens(AsaliLangGrammarParser.ELSE)
            else:
                return self.getToken(AsaliLangGrammarParser.ELSE, i)

        def stat_block(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_ifStat

        def enterRule(self, listener):
            if hasattr(listener, "enterIfStat"):
                listener.enterIfStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIfStat"):
                listener.exitIfStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitIfStat"):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):

        localctx = AsaliLangGrammarParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(AsaliLangGrammarParser.IF)
            self.state = 55
            self.condition_block()
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    self.match(AsaliLangGrammarParser.ELSE)
                    self.state = 57
                    self.match(AsaliLangGrammarParser.IF)
                    self.state = 58
                    self.condition_block() 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 64
                self.match(AsaliLangGrammarParser.ELSE)
                self.state = 65
                self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.Condition_blockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_condition_block

        def enterRule(self, listener):
            if hasattr(listener, "enterCondition_block"):
                listener.enterCondition_block(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCondition_block"):
                listener.exitCondition_block(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCondition_block"):
                return visitor.visitCondition_block(self)
            else:
                return visitor.visitChildren(self)




    def condition_block(self):

        localctx = AsaliLangGrammarParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.expr(0)
            self.state = 69
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_blockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.Stat_blockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(AsaliLangGrammarParser.OBRACE, 0)

        def block(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.BlockContext,0)


        def CBRACE(self):
            return self.getToken(AsaliLangGrammarParser.CBRACE, 0)

        def BEGIN(self):
            return self.getToken(AsaliLangGrammarParser.BEGIN, 0)

        def END(self):
            return self.getToken(AsaliLangGrammarParser.END, 0)

        def DO(self):
            return self.getToken(AsaliLangGrammarParser.DO, 0)

        def stat(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.StatContext,0)


        def THEN(self):
            return self.getToken(AsaliLangGrammarParser.THEN, 0)

        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_stat_block

        def enterRule(self, listener):
            if hasattr(listener, "enterStat_block"):
                listener.enterStat_block(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStat_block"):
                listener.exitStat_block(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStat_block"):
                return visitor.visitStat_block(self)
            else:
                return visitor.visitChildren(self)




    def stat_block(self):

        localctx = AsaliLangGrammarParser.Stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stat_block)
        self._la = 0 # Token type
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.match(AsaliLangGrammarParser.OBRACE)
                self.state = 72
                self.block()
                self.state = 73
                self.match(AsaliLangGrammarParser.CBRACE)
                pass
            elif token in [24, 26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 75
                    self.match(AsaliLangGrammarParser.DO)


                self.state = 78
                self.match(AsaliLangGrammarParser.BEGIN)
                self.state = 79
                self.block()
                self.state = 80
                self.match(AsaliLangGrammarParser.END)
                pass
            elif token in [31, 33, 34, 35, 36, 42]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.stat()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.match(AsaliLangGrammarParser.THEN)
                self.state = 84
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.WhileStatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(AsaliLangGrammarParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_whileStat

        def enterRule(self, listener):
            if hasattr(listener, "enterWhileStat"):
                listener.enterWhileStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitWhileStat"):
                listener.exitWhileStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitWhileStat"):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)




    def whileStat(self):

        localctx = AsaliLangGrammarParser.WhileStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(AsaliLangGrammarParser.WHILE)
            self.state = 88
            self.expr(0)
            self.state = 89
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.ForStatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(AsaliLangGrammarParser.FOR, 0)

        def ID(self):
            return self.getToken(AsaliLangGrammarParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(AsaliLangGrammarParser.ASSIGN, 0)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AsaliLangGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(AsaliLangGrammarParser.ExprContext,i)


        def COL(self):
            return self.getToken(AsaliLangGrammarParser.COL, 0)

        def stat_block(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_forStat

        def enterRule(self, listener):
            if hasattr(listener, "enterForStat"):
                listener.enterForStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitForStat"):
                listener.exitForStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitForStat"):
                return visitor.visitForStat(self)
            else:
                return visitor.visitChildren(self)




    def forStat(self):

        localctx = AsaliLangGrammarParser.ForStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(AsaliLangGrammarParser.FOR)
            self.state = 92
            self.match(AsaliLangGrammarParser.ID)
            self.state = 93
            self.match(AsaliLangGrammarParser.ASSIGN)
            self.state = 94
            self.expr(0)
            self.state = 95
            self.match(AsaliLangGrammarParser.COL)
            self.state = 96
            self.expr(0)
            self.state = 97
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.LoopStatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LOOP(self):
            return self.getToken(AsaliLangGrammarParser.LOOP, 0)

        def ID(self):
            return self.getToken(AsaliLangGrammarParser.ID, 0)

        def COL(self):
            return self.getToken(AsaliLangGrammarParser.COL, 0)

        def expr(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_loopStat

        def enterRule(self, listener):
            if hasattr(listener, "enterLoopStat"):
                listener.enterLoopStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLoopStat"):
                listener.exitLoopStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLoopStat"):
                return visitor.visitLoopStat(self)
            else:
                return visitor.visitChildren(self)




    def loopStat(self):

        localctx = AsaliLangGrammarParser.LoopStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loopStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(AsaliLangGrammarParser.LOOP)
            self.state = 100
            self.match(AsaliLangGrammarParser.ID)
            self.state = 101
            self.match(AsaliLangGrammarParser.COL)
            self.state = 102
            self.expr(0)
            self.state = 103
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallStatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.MethodCallStatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def methodCall(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.MethodCallContext,0)


        def SCOL(self):
            return self.getToken(AsaliLangGrammarParser.SCOL, 0)

        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_methodCallStat

        def enterRule(self, listener):
            if hasattr(listener, "enterMethodCallStat"):
                listener.enterMethodCallStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethodCallStat"):
                listener.exitMethodCallStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethodCallStat"):
                return visitor.visitMethodCallStat(self)
            else:
                return visitor.visitChildren(self)




    def methodCallStat(self):

        localctx = AsaliLangGrammarParser.MethodCallStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodCallStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.methodCall()
            self.state = 106
            self.match(AsaliLangGrammarParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.MethodCallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AsaliLangGrammarParser.ID, 0)

        def methodCallArguments(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.MethodCallArgumentsContext,0)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_methodCall

        def enterRule(self, listener):
            if hasattr(listener, "enterMethodCall"):
                listener.enterMethodCall(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethodCall"):
                listener.exitMethodCall(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethodCall"):
                return visitor.visitMethodCall(self)
            else:
                return visitor.visitChildren(self)




    def methodCall(self):

        localctx = AsaliLangGrammarParser.MethodCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_methodCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(AsaliLangGrammarParser.ID)
            self.state = 109
            self.methodCallArguments()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.MethodCallArgumentsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AsaliLangGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(AsaliLangGrammarParser.ExprContext,i)


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_methodCallArguments

        def enterRule(self, listener):
            if hasattr(listener, "enterMethodCallArguments"):
                listener.enterMethodCallArguments(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethodCallArguments"):
                listener.exitMethodCallArguments(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethodCallArguments"):
                return visitor.visitMethodCallArguments(self)
            else:
                return visitor.visitChildren(self)




    def methodCallArguments(self):

        localctx = AsaliLangGrammarParser.MethodCallArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_methodCallArguments)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.expr(0)
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 113
                        self.match(AsaliLangGrammarParser.T__0)
                        self.state = 114
                        self.expr(0) 
                    self.state = 119
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AsaliLangGrammarParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AsaliLangGrammarParser.RULE_expr

     
        def copyFrom(self, ctx):
            super(AsaliLangGrammarParser.ExprContext, self).copyFrom(ctx)


    class MethodCallExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a AsaliLangGrammarParser.ExprContext)
            super(AsaliLangGrammarParser.MethodCallExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def methodCall(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.MethodCallContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterMethodCallExpr"):
                listener.enterMethodCallExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethodCallExpr"):
                listener.exitMethodCallExpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethodCallExpr"):
                return visitor.visitMethodCallExpr(self)
            else:
                return visitor.visitChildren(self)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a AsaliLangGrammarParser.ExprContext)
            super(AsaliLangGrammarParser.NotExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(AsaliLangGrammarParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(AsaliLangGrammarParser.ExprContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterNotExpr"):
                listener.enterNotExpr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNotExpr"):
                listener.exitNotExpr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitNotExpr"):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)

